# cypress

./: .env.example  .env.worker.example  .gitignore
.claude/: CLAUDE.md
.github/workflows/: test.yml
app/: package-lock.json  package.json
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  server.rs
app/src-tauri/src/remote/: mod.rs  profiles.rs  ssh.rs  state.rs
app/src/components/: ModelPicker.tsx  RemotesPanel.tsx  ServerControl.tsx  Toast.tsx  VoiceButton.tsx  WorkerLogPanel.tsx
app/src/store/: bootstrap.ts  remoteStore.ts  serverStore.ts  voiceStore.ts  workerLogStore.ts
proto/: worker.proto
scripts/: ws_smoke.py
server/: go.mod  main.go
server/audio/: pipeline.go  ports.go
server/downloads/: downloads.go  downloads_test.go
server/inference/: catalog.go  catalog_test.go  downloads.go  downloads_test.go  family_test.go  familyenv.go  familyenv_test.go  grpc_worker.go  handlers.go  integration_test.go  manager.go  manager_test.go  manifest.go  manifest_test.go  reachability_test.go  reconnect.go  stream.go  stream_test.go  wireconv.go  worker.go  worker_test.go
server/models/: cache.go  cache_test.go  catalog.go  catalog_test.go  info.go  manifest.go  manifest_test.go
server/workers/: familyenv.go  familyenv_test.go  grpc.go  grpc_test.go  handle.go  integration_test.go  spawn.go  wireconv.go
tauri-app/: index.html  package-lock.json  package.json
tauri-app/src/: App.tsx  index.css  main.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs  server.rs
tauri-app/src/components/: ModelPicker.tsx  ServerControl.tsx
tauri-app/src/hooks/: useChromaticAberration.ts
tauri-app/src/themes/: atom-material.ts  index.ts  slate.ts  types.ts
worker/: audio.py  conftest.py  ipc_commands.py  main.py  platform_info.py  pyproject.toml  test_integration.py  test_platform_info.py
worker/audio/: test_socket.py
worker/ipc/: __init__.py  commands.py  conftest.py  server.py  test_commands.py  test_server.py
worker/models/: __init__.py  base.py  moshi.py  moshi_mlx.py  moshi_mlx_stream.py  moshi_stream.py  test_base.py  test_moshi.py  test_moshi_mlx.py  test_moshi_stream.py
worker/models/moshi/: mlx.py  pyproject.toml  torch.py  torch_stream.py
worker/models/personaplex/: __init__.py  pyproject.toml  torch.py
