# AREA: worker · CONFIG
# Shared worker project. Holds the composition root (main.py) and shared
# features (audio, ipc, base models) plus dev deps for the unit suite. It
# does NOT pull in any model libraries — those live in per-family projects
# under worker/models/<family>/, each with its own .venv. The Go server
# spawns the worker through the family-specific venv's Python interpreter
# (see server/inference/worker.go), so the chosen model's Python stack is
# the only one ever imported. This keeps PersonaPlex's forked `moshi`
# package from colliding with kyutai's at install time.

[project]
name = "cypress-worker"
version = "0.1.0"
description = "Shared worker scaffold for Cypress (no model deps)"
requires-python = ">=3.11"
# REASON: empty by design. Model deps belong in the per-family pyproject
# (e.g. worker/models/moshi/pyproject.toml). The unit suite fakes
# huggingface_hub via sys.modules monkeypatch, so we don't need it here.
dependencies = []

# REASON: dev-only deps (test runner, async test helper) live in a uv
# dependency group so packaged builds don't ship pytest. Activate locally
# with `uv sync --group dev`; CI runs `uv run --group dev pytest`.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
# REASON: keeping integration tests gated behind a marker means a default
# `pytest` run stays fast and dependency-light (no real model loads, no
# real subprocesses). Run integration explicitly with `pytest -m integration`.
markers = [
    "integration: end-to-end tests that exercise real subprocesses, sockets, or model loaders",
]
# Default invocation deselects integration; override with `-m integration`
# (the explicit -m on the cmdline replaces this addopts value, so the
# integration suite still runs when asked for). Also ignore family-
# specific test trees — those import model libs (torch, mlx, …) that
# don't live in this venv. Each family's tests run from its own venv,
# e.g. `worker/models/moshi/.venv/bin/pytest worker/models/moshi/`.
addopts = "-m 'not integration' --ignore=models/moshi"
# pytest-asyncio: allow `async def test_...` without a per-test decorator.
asyncio_mode = "auto"
