[package]
name = "cypress"
version = "0.1.0"
description = "Local-first duplex voice AI"
authors = ["ARTIFACT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Cypress"
path = "src/main.rs"

[lib]
name = "cypress_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "time", "io-util", "net", "rt-multi-thread", "macros"] }
# REASON: token generation + profile ids. rand for crypto-strong tokens,
# uuid for stable per-profile ids that survive renames.
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

